--- a/rnw/references.bib
+++ b/rnw/references.bib
@@ -244,7 +244,7 @@
    type = {Journal Article}
 }
 @article{Clostio_et_al_2012,
-   author = {Clostio, R. W. and Martinez, A. M. and LeBlanc, K. E. and Anthony, N. M. and Katzner, Todd and Johnson, Jeff},
+   author = {Clostio, R. W. and Martinez, A. M. and LeBlanc, K. E. and Anthony, N. M.},
    title = {Population genetic structure of a threatened tortoise across the south-eastern {U}nited {S}tates: implications for conservation management},
    journal = {Animal Conservation},
    volume = {15},
@@ -518,7 +518,7 @@
    type = {Journal Article}
 }
 @article{Ryynanen_et_al_2007,
-   author = {Ryynanen, Heikki J. and Tonteri, Anni and Vasemägi, Anti and Primmer, Craig R.},
+   author = {Ryynanen, Heikki J. and Tonteri, Anni and Vasemagi, Anti and Primmer, Craig R.},
    title = {A comparison of biallelic markers and microsatellites for the estimation of population and conservation genetic parameters in {A}tlantic salmon ({S}almo salar)},
    journal = {Journal of Heredity},
    volume = {98},
@@ -548,7 +548,7 @@
    type = {Journal Article}
 }
 @article{Glover_et_al_2010,
-   author = {Glover, Kevin A and Hansen, Michael M and Lien, Sigbjørn and Als, Thomas D and Høyheim, Bjørn and Skaala, Øystein},
+   author = {Glover, Kevin A and Hansen, Michael M and Lien, Sigbjorn and Als, Thomas D and Hoyheim, Bjorn and Skaala, Oystein},
    title = {A comparison of {SNP} and {STR} loci for delineating population structure and performing individual genetic assignment},
    journal = {BMC Genetics},
    volume = {11},
@@ -640,5 +640,36 @@
    volume = {17},
    pages = {551-557},
    year = {2002},
+   type = {Journal Article}
+}
+@article{Langefors_et_al_2001,
+   author = {Langefors, A. and Lohm, J. and Grahn, M. and Andersen, O. and von Schantz, T.},
+   title = {Association between major histocompatibility complex class IIB alleles and resistance to {A}eromonas salmonicida in Atlantic salmon},
+   journal = {Proceedings of the Royal Society of London B},
+   volume = {268},
+   number = {1466},
+   pages = {479-485},
+   year = {2001},
+   type = {Journal Article}
+}
+@article{Vitti_et_al_2013,
+   author = {Vitti, J. J. and Grossman, S. R. and Sabeti, P. C.},
+   title = {Detecting natural selection in genomic data},
+   journal = {Annual Review of Genetics},
+   volume = {47},
+   pages = {97-120},
+   year = {2013},
+   type = {Journal Article}
+}
+@article{Narum_and_Hess_2011,
+   author = {Narum, Shawn R. and Hess, Jon E.},
+   title = {Comparison of {FST} outlier tests for {SNP} loci under selection},
+   journal = {Molecular Ecology Resources},
+   volume = {11},
+   pages = {184-194},
+   ISSN = {1755-0998},
+   DOI = {10.1111/j.1755-0998.2011.02987.x},
+   url = {http://dx.doi.org/10.1111/j.1755-0998.2011.02987.x},
+   year = {2011},
    type = {Journal Article}
 }
