changes for review cycle 1

--- a/rnw/Supporting_Information_for_online_publication_old.Rnw
+++ b/rnw/Supporting_Information_for_online_publication_old.Rnw
@@ -17,7 +17,7 @@
 \title{Supporting Information for: \\
 Elbers JP, Clostio RW and Taylor SS (2016) Population genetic \\
 inferences using immune gene SNPs mirror patterns \\
-inferred by microsatellites. Molecular Ecology Resources.}
+inferred by microsatellites. Molecular Ecology.}
 \date{}
 \author{}
 
@@ -25,65 +25,16 @@ inferred by microsatellites. Molecular Ecology Resources.}
 
 \maketitle
 
-<<echo=FALSE>>=
-library("ggplot2")
-library("xtable")
-seqMetrics = read.table(file = "ALL-samples-recal03-baitsonly.hsmetrics.txt", header = T) #read in the sequencing metrics
-
-# calculate mean and sd number of genes per sample
-genes <- read.table("gene.counts.per.sample")
-
-# calculate mean and sd number of exons per sample
-exons <- read.table("exon.counts.per.sample")
-df3 <- as.data.frame(cbind("Sample" = paste(exons$V1),
-                           "Total reads" = seqMetrics$TOTAL_READS[-1],
-                           "Percent unique reads" = seqMetrics$PCT_PF_UQ_READS[-1]*100,
-                           "Percent unique reads alignable" = seqMetrics$PCT_PF_UQ_READS_ALIGNED[-1]*100, 
-                           "Mean coverage" = seqMetrics$MEAN_BAIT_COVERAGE[-1], 
-                           "Percent bases greater than 20x coverage" = seqMetrics$PCT_TARGET_BASES_20X[-1]*100,
-                           "Number of genes" = genes$V2,
-                           "Number of exons" = exons$V2))
-#xtable(df3)
-@
-
-\noindent
-\textbf{Table S1} Sequencing metrics for \textit{Gopherus polyphemus} samples. Percent UR for percent of total reads that were unique, Percent URA for percent of unique reads that were alignable, Mean coverage for mean number of reads across the target region, Percent 20x for percent of bases in target region with greater than 20x coverage, No. genes for number of genes, and No. exons for number of exons.\\
-\begin{table}[ht]
-\centering
-\begin{tabular}{rcccccccc}
-  \hline
- & Sample & Total reads & Percent UR & Percent URA & Mean coverage & Percent 20x & No. genes & No. exons \\ 
-  \hline
-1 & AL102 & 3,212,450 & 42.5489 & 98.7624 & 64.702327 & 70.9051 & 592 & 4,107 \\ 
-  2 & AL103 & 4,465,410 & 41.6559 & 98.7366 & 86.236747 & 74.194 & 598 & 4,238 \\ 
-  3 & AL106 & 3,359,715 & 45.6208 & 98.8027 & 71.663432 & 71.6972 & 600 & 4,156 \\ 
-  4 & AL108 & 2,819,070 & 46.9525 & 98.4416 & 61.437226 & 72.4334 & 600 & 4,222 \\ 
-  5 & FL846 & 3,053,761 & 48.2949 & 98.7728 & 68.408722 & 69.2006 & 594 & 4,120 \\ 
-  6 & FL855 & 3,001,641 & 49.9861 & 98.8119 & 70.02287 & 70.426 & 587 & 4,162 \\ 
-  7 & FL857 & 4,126,014 & 48.3302 & 98.7755 & 91.599757 & 73.6741 & 595 & 4,209 \\ 
-  8 & FL880 & 2,495,515 & 47.5824 & 98.5998 & 55.003413 & 67.7526 & 592 & 4,140 \\ 
-  9 & GA1044 & 2,735,000 & 50.4835 & 98.8161 & 64.467663 & 69.2348 & 594 & 4,135 \\ 
-  10 & GA1435 & 3,114,664 & 48.0062 & 98.8188 & 69.54348 & 69.2231 & 593 & 4,088 \\ 
-  11 & GA1835 & 3,160,564 & 47.5032 & 98.8015 & 69.893149 & 70.4834 & 595 & 4,135 \\ 
-  12 & GA462 & 1,692,328 & 50.9997 & 98.7798 & 40.600786 & 61.147 & 586 & 3,934 \\ 
-  13 & LA62 & 2,490,648 & 47.5604 & 98.7996 & 55.582373 & 67.2087 & 592 & 4,032 \\ 
-  14 & LA66 & 2,366,268 & 48.6917 & 98.6262 & 53.254455 & 65.3586 & 592 & 3,992 \\ 
-  15 & LA77 & 3,449,116 & 46.1951 & 98.7934 & 74.612173 & 72.2789 & 600 & 4,162 \\ 
-  16 & LA78 & 1,920,641 & 55.6212 & 98.8716 & 50.102979 & 63.859 & 596 & 3,899 \\ 
-   \hline
-\end{tabular}
-\end{table}
-
 \pagebreak{}
 \begin{longtable}{l}
 \noindent
-\textbf{Table S2} All genes with di-allelic, polymorphic SNPs from 16 \textit{Gopherus polyphemus} samples.\\
+\textbf{Table S1} All genes with di-allelic, polymorphic SNPs.\\
 \hline
 \textbf{Gene}\\
 \hline
 \endfirsthead
 \multicolumn{1}{l}
-{Table S2 -- \textit{Continued from previous page}} \\
+{Table S1 -- \textit{Continued from previous page}} \\
 \hline
 \textbf{Gene}\\
 \hline
@@ -588,358 +539,14 @@ zona pellucida sperm-binding protein 4-like \\
 
 \pagebreak{}
 \noindent
-<<Figure-2, echo=FALSE>>=
-#FROM http://gettinggeneticsdone.blogspot.com/2014/03/visualize-coverage-exome-targeted-ngs-bedtools.html #
-
-# Get a list of the bedtools output files you'd like to read in
-files <- list.files(pattern="all.txt$")
-
-# Split files into list <= 8 samples per list
-files <- split(files,ceiling(seq_along(files)/8))
-
-# Optional, create short sample names from the filenames. 
-# For example, in this experiment, my sample filenames might look like this:
-# AL102.baitcoverage.all.txt
-# AL103.baitcoverage.all.txt
-# This regular expression leaves me with "AL102" and "AL103" in the legend.
-
-# for set1
-labs1 <- paste("", gsub("\\.baitcoverage\\.all\\.txt", "",
-                             files$'1', perl=TRUE), sep="")
-
-labs2 <- paste("", gsub("\\.baitcoverage\\.all\\.txt", "",
-                              files$'2', perl=TRUE), sep="")
-
-
-# Create lists to hold coverage and cumulative coverage for each alignment,
-# and read the data into these lists.
-cov1 <- list()
-cov2 <- list()
-cov_cumul1 <- list()
-cov_cumul2 <- list()
-
-for (i in 1:length(files$`1`)) {
-  cov1[[i]] <- read.table(files$`1`[i])
-  cov_cumul1[[i]] <- 1-cumsum(cov1[[i]][,5])
-}
-
-for (i in 1:length(files$`2`)) {
-  cov2[[i]] <- read.table(files$`2`[i])
-  cov_cumul2[[i]] <- 1-cumsum(cov2[[i]][,5])
-}
-
-# Pick some colors
-library(RColorBrewer)
-cols1 <- brewer.pal(length(cov1), "Dark2")
-cols2 <- brewer.pal(length(cov2), "Dark2")
-
-#Figure 2
-
-# Create plot area, but do not plot anything. Add gridlines and axis labels.
-plot(cov1[[1]][2:201, 2],
-     cov_cumul1[[1]][1:200],
-     type='n',
-     xlab="Depth",
-     ylab="Fraction of capture target bases > depth",
-     ylim=c(0,1.0))
-abline(v = 20, col = "gray60")
-abline(v = 50, col = "gray60")
-abline(v = 80, col = "gray60")
-abline(v = 100, col = "gray60")
-abline(h = 0.50, col = "gray60")
-abline(h = 0.90, col = "gray60")
-axis(1, at=c(20,50,80), labels=c(20,50,80))
-axis(2, at=c(0.90), labels=c(0.90))
-axis(2, at=c(0.50), labels=c(0.50))
-
-# Actually plot the data for each of the alignments (stored in the lists).
-for (i in 1:length(cov1)) points(cov1[[i]][2:201, 2],
-                                cov_cumul1[[i]][1:200], type='l', lwd=3, col=cols1[i])
-
-# Add a legend using the nice sample labeles rather than the full filenames.
-legend("topright", legend=labs1, col=cols1, lty=1, lwd=4)
-@
+\includegraphics [scale=1.0]{snp_structure_k2}
 \noindent
-\textbf{Fig. S1} Coverage plots for first eight \textit{Gopherus polyphemus} samples showing number of sequencing reads at or above specified proportions. A value at 100 Depth and 0.5 fraction means 50 percent of bases were at or above 100X coverage.\\
-
+\textbf{Fig. S1} \texttt{STRUCTURE} plot for 17,901 immune gene SNPs with optimum number of clusters \textit{K} = 2 determined by \texttt{STRUCTURE HARVESTER}.\\
 
 \pagebreak{}
 \noindent
-<<Figure-3, echo=FALSE>>=
-# figure 3
-# Create plot area, but do not plot anything. Add gridlines and axis labels.
-plot(cov2[[1]][2:201, 2],
-     cov_cumul2[[1]][1:200],
-     type='n',
-     xlab="Depth",
-     ylab="Fraction of capture target bases > depth",
-     ylim=c(0,1.0))
-abline(v = 20, col = "gray60")
-abline(v = 50, col = "gray60")
-abline(v = 80, col = "gray60")
-abline(v = 100, col = "gray60")
-abline(h = 0.50, col = "gray60")
-abline(h = 0.90, col = "gray60")
-axis(1, at=c(20,50,80), labels=c(20,50,80))
-axis(2, at=c(0.90), labels=c(0.90))
-axis(2, at=c(0.50), labels=c(0.50))
-
-# Actually plot the data for each of the alignments (stored in the lists).
-for (i in 1:length(cov2)) points(cov2[[i]][2:201, 2],
-                                 cov_cumul2[[i]][1:200], type='l', lwd=3, col=cols2[i])
-
-# Add a legend using the nice sample labeles rather than the full filenames.
-legend("topright", legend=labs2, col=cols2, lty=1, lwd=4)
-@
+\includegraphics [scale=1.0]{msat_structure_k3}
 \noindent
-\textbf{Fig. S2} Coverage plots for last eight \textit{Gopherus polyphemus} samples showing number of sequencing reads at or above specified proportions.\\
-
-
-\pagebreak{}
-\noindent
-\includegraphics [scale=1.0]{K2MajorCluster-snps}
-\noindent
-\textbf{Fig. S3} \texttt{STRUCTURE} plot for 16 \textit{Gopherus polyphemus} sequenced at 17,901 immune gene SNPs with optimum number of clusters \textit{K} = 2 determined by \texttt{STRUCTURE HARVESTER}.\\
-
-\pagebreak{}
-\noindent
-\includegraphics [scale=1.0]{structure-results-msats-review-clumpak-k4}
-\noindent
-\textbf{Fig. S4} \texttt{STRUCTURE} plot for the full microsatellite dataset (101 \textit{Gopherus polyphemus} genotyed at 10 microsatellite loci) with optimum number of clusters \textit{K} = 4 determined by \texttt{STRUCTURE HARVESTER}.\\
-
-\pagebreak{}
-\noindent
-\includegraphics [scale=1.0]{K3MajorCluster}
-\noindent
-\textbf{Fig. S5} \texttt{STRUCTURE} plot for the partial microsatellite dataset (16 \textit{Gopherus polyphemus} genotyed at 10 microsatellite loci) with optimum number of clusters \textit{K} = 3 determined by \texttt{STRUCTURE HARVESTER}.\\
-
-\pagebreak{}
-\noindent
-<<Figure-S6, echo=FALSE>>=
-#Observed het
-load("power_analysis.RData") # created by power_analysis.R
-Ho <- ggplot(df4.snps, aes(reorder(Size, Num), Ho)) +
-  geom_boxplot() + 
-  geom_hline(aes(yintercept=0.05), colour="#990000", linetype="dashed") +
-  theme_bw() + 
-  theme(panel.border = element_rect(linetype = "solid", colour = "black"), 
-        panel.grid.major = element_blank(),
-        panel.grid.minor = element_blank()) +  
-  ylab("") + 
-  xlab(expression(paste("Number of randomly chosen SNPs - H", scriptstyle("O")))) +
-  theme(axis.text = element_text(size = rel(1.2))) + 
-  theme(axis.title = element_text(size = rel(1.4))) +
-  annotate("text", label = "(A)", x = 11, y = 0.7, size = 7, colour = "black")
-
-
-# Expected het
-He <- ggplot(df4.snps, aes(reorder(Size, Num), He)) +
-  geom_boxplot() + 
-  geom_hline(aes(yintercept=0.05), colour="#990000", linetype="dashed") +
-  theme_bw() + 
-  theme(panel.border = element_rect(linetype = "solid", colour = "black"), 
-        panel.grid.major = element_blank(),
-        panel.grid.minor = element_blank()) +  
-  ylab(expression(paste("Pearson's r ",italic("P"), " value"))) +
-  xlab(expression(paste("Number of randomly chosen SNPs - H", scriptstyle("E")))) +
-  theme(axis.text = element_text(size = rel(1.2))) + 
-  theme(axis.title = element_text(size = rel(1.4))) +
-  annotate("text", label = "(B)", x = 11, y = 0.7, size = 7, colour = "black")
-
-# Fst
-Fst <- ggplot(df4.snps, aes(reorder(Size, Num), Fst)) +
-  geom_boxplot() + 
-  geom_hline(aes(yintercept=0.05), colour="#990000", linetype="dashed") +
-  theme_bw() + 
-  theme(panel.border = element_rect(linetype = "solid", colour = "black"), 
-        panel.grid.major = element_blank(),
-        panel.grid.minor = element_blank()) +  
-  ylab("") +
-  xlab(expression(paste("Number of randomly chosen SNPs - F", scriptstyle("ST")))) +
-  theme(axis.text = element_text(size = rel(1.2))) + 
-  theme(axis.title = element_text(size = rel(1.4))) +
-  annotate("text", label = "(C)", x = 11, y = 0.55, size = 7, colour = "black")
-
-
-#Define multiplot function from:
-# http://www.cookbook-r.com/Graphs/Multiple_graphs_on_one_page_%28ggplot2%29/
-multiplot <- function(..., plotlist=NULL, file, cols=1, layout=NULL) {
-  library(grid)
-
-  # Make a list from the ... arguments and plotlist
-  plots <- c(list(...), plotlist)
-
-  numPlots = length(plots)
-
-  # If layout is NULL, then use 'cols' to determine layout
-  if (is.null(layout)) {
-    # Make the panel
-    # ncol: Number of columns of plots
-    # nrow: Number of rows needed, calculated from # of cols
-    layout <- matrix(seq(1, cols * ceiling(numPlots/cols)),
-                    ncol = cols, nrow = ceiling(numPlots/cols))
-  }
-
- if (numPlots==1) {
-    print(plots[[1]])
-
-  } else {
-    # Set up the page
-    grid.newpage()
-    pushViewport(viewport(layout = grid.layout(nrow(layout), ncol(layout))))
-
-    # Make each plot, in the correct location
-    for (i in 1:numPlots) {
-      # Get the i,j matrix positions of the regions that contain this subplot
-      matchidx <- as.data.frame(which(layout == i, arr.ind = TRUE))
-
-      print(plots[[i]], vp = viewport(layout.pos.row = matchidx$row,
-                                      layout.pos.col = matchidx$col))
-    }
-  }
-}
-
-multiplot(Ho, He, Fst, cols = 1)
-@
-\noindent
-\textbf{Fig. S6} Subsampling analysis showing how many randomly sampled SNP loci out of the total of 17,901 are needed in comparison to the full microsatellite dataset (101 \textit{Gopherus polyphemus} genotyed at 10 microsatellite loci) for Pearon's r correlation coefficient to be significant at 0.05 level (dotted line) for (A) observed heterozygosity; (B) expected heterozygosity; and (C) \textsc{Fst}. There were 10 simulations for each size class of SNPs. \textsc{Ho} for observed heterozygosity, \textsc{He} for expected heterozygosity.\\
-
-\pagebreak{}
-\noindent
-<<Figure-S7, echo=FALSE>>=
-#Allelic richness
-load("power-analysis-part-msats.RData") # created by power-analysis-part-msats.R
-part.AR <- ggplot(part.df4.snps, aes(reorder(Size, Num), AR)) +
-  geom_boxplot() + 
-  geom_hline(aes(yintercept=0.05), colour="#990000", linetype="dashed") +
-  theme_bw() + 
-  theme(panel.border = element_rect(linetype = "solid", colour = "black"), 
-        panel.grid.major = element_blank(),
-        panel.grid.minor = element_blank()) +  
-  ylab("") + 
-  xlab(expression(paste("Number of randomly chosen SNPs - A", scriptstyle("R")))) +
-  theme(axis.text = element_text(size = rel(1.2))) + 
-  theme(axis.title = element_text(size = rel(1.4))) +
-  annotate("text", label = "(A)", x = 11, y = 0.5, size = 7, colour = "black")
-
-
-# Expected het
-part.He <- ggplot(part.df4.snps, aes(reorder(Size, Num), He)) +
-  geom_boxplot() + 
-  geom_hline(aes(yintercept=0.05), colour="#990000", linetype="dashed") +
-  theme_bw() + 
-  theme(panel.border = element_rect(linetype = "solid", colour = "black"), 
-        panel.grid.major = element_blank(),
-        panel.grid.minor = element_blank()) +  
-  ylab(expression(paste("Pearson's r ",italic("P"), " value"))) +
-  xlab(expression(paste("Number of randomly chosen SNPs - H", scriptstyle("E")))) +
-  theme(axis.text = element_text(size = rel(1.2))) + 
-  theme(axis.title = element_text(size = rel(1.4))) +
-  annotate("text", label = "(B)", x = 11, y = 0.7, size = 7, colour = "black")
-
-# Fst
-part.Fst <- ggplot(part.df4.snps, aes(reorder(Size, Num), Fst)) +
-  geom_boxplot() + 
-  geom_hline(aes(yintercept=0.05), colour="#990000", linetype="dashed") +
-  theme_bw() + 
-  theme(panel.border = element_rect(linetype = "solid", colour = "black"), 
-        panel.grid.major = element_blank(),
-        panel.grid.minor = element_blank()) +  
-  ylab("") +
-  xlab(expression(paste("Number of randomly chosen SNPs - F", scriptstyle("ST")))) +
-  theme(axis.text = element_text(size = rel(1.2))) + 
-  theme(axis.title = element_text(size = rel(1.4))) +
-  annotate("text", label = "(C)", x = 11, y = 0.35, size = 7, colour = "black")
-
-
-#Define multiplot function from:
-# http://www.cookbook-r.com/Graphs/Multiple_graphs_on_one_page_%28ggplot2%29/
-multiplot <- function(..., plotlist=NULL, file, cols=1, layout=NULL) {
-  library(grid)
-
-  # Make a list from the ... arguments and plotlist
-  plots <- c(list(...), plotlist)
-
-  numPlots = length(plots)
-
-  # If layout is NULL, then use 'cols' to determine layout
-  if (is.null(layout)) {
-    # Make the panel
-    # ncol: Number of columns of plots
-    # nrow: Number of rows needed, calculated from # of cols
-    layout <- matrix(seq(1, cols * ceiling(numPlots/cols)),
-                    ncol = cols, nrow = ceiling(numPlots/cols))
-  }
-
- if (numPlots==1) {
-    print(plots[[1]])
-
-  } else {
-    # Set up the page
-    grid.newpage()
-    pushViewport(viewport(layout = grid.layout(nrow(layout), ncol(layout))))
-
-    # Make each plot, in the correct location
-    for (i in 1:numPlots) {
-      # Get the i,j matrix positions of the regions that contain this subplot
-      matchidx <- as.data.frame(which(layout == i, arr.ind = TRUE))
-
-      print(plots[[i]], vp = viewport(layout.pos.row = matchidx$row,
-                                      layout.pos.col = matchidx$col))
-    }
-  }
-}
-
-multiplot(part.AR, part.He, part.Fst, cols = 1)
-@
-\noindent
-\textbf{Fig. S7} Subsampling analysis showing how many randomly sampled SNP loci out of the total of 17,901 are needed in comparison to the partial microsatellite dataset (16 \textit{Gopherus polyphemus} genotyed at 10 microsatellite loci) for Pearon's r correlation coefficient to be significant at 0.05 level (dotted line) for (A) allelic richness; (B) expected heterozygosity; and (C) \textsc{Fst}. There were 10 simulations for each size class of SNPs. \textsc{Ar} for allelic richness, \textsc{He} for expected heterozygosity.\\ 
-
-
-<<Figure S8, echo=FALSE>>=
-ne <- read.table("ne_estimates.txt", header=T)
-ne$Population <- gsub("GG", "GA", ne$Population)
-ne$Method <- gsub("HET-0.05", "HET", ne$Method)
-ne$Method <- gsub("LD-0.05", "LD", ne$Method)
-ne$Method <- gsub("MolCoan", "MOL", ne$Method)
-ne_snps <- ne[ne$Marker=="snps",]
-ne_msats<- ne[ne$Marker=="msats",]
-
-# snps useful except LD goes to infinity (leave it out?)
-snps <- ggplot(ne_snps, aes(Method, Ne)) +
-  geom_pointrange(aes(colour=Population,
-                           ymin = Lower95.CI, ymax = Upper95.CI),
-                       position = position_dodge(width = 0.5)) + 
-  theme_bw() +
-  theme(panel.border = element_rect(linetype = "solid", colour = "black"),
-        panel.grid.major.x = element_blank(),
-        panel.grid.minor.x = element_blank()) +
-  theme(axis.text = element_text(size = rel(1.6))) +
-  theme(axis.title = element_text(size = rel(2))) +
-  scale_y_continuous(breaks = c(0,50,100,150,200,250,300,350,400)) +
-  expand_limits(y = c(0,Inf)) +
-  ylab("Ne SNPs")
-
-
-# comments microsatellites not very useful, all were very high with upper confidence intervals to infinity except molecular coancestry
-msats <- ggplot(ne_msats, aes(Method, Ne)) +
-  geom_pointrange(aes(colour=Population,
-                           ymin = Lower95.CI, ymax = Upper95.CI),
-                       position = position_dodge(width = 0.5)) + 
-  theme_bw() +
-  theme(panel.border = element_rect(linetype = "solid", colour = "black"),
-        panel.grid.major.x = element_blank(),
-        panel.grid.minor.x = element_blank()) +
-  theme(axis.text = element_text(size = rel(1.6))) +
-  theme(axis.title = element_text(size = rel(2))) +
-  scale_y_continuous(breaks = c(0,500,1000,1500,2000,2500,3000,3500)) +
-  expand_limits(y = c(0,Inf)) +
-  ylab("Ne Microsatellites")
-
-#graph figures S8A-S8B plots
-multiplot(msats, snps,cols = 1)
-@
-\noindent
-\textbf{Fig. S8} Effective population sizes per generation (Ne) along with 95 \% confidence intervals for \textit{Gopherus polyphemus} samples estimated with the program NeEstimator using (A) the full microsatellite dataset (101 \textit{G. polyphemus} genotyed at 10 microsatellite loci) or (B) the SNP dataset (16 \textit{G. polyphemus} sequenced at 17,901 immune gene SNPs). Dots that are on the top of the graph represent Ne estimates of infinity, and lines that extend to the top of the graph represent upper 95 \% confidence limits of infinity. LD for linkage disequilibrium method of Waples \& Do (2008), HET for heterozygote-excess method of Zhdanova \& Pudovkin (2008), and MOL for the molecular coancestry method of Nomura (2008). Note that the HET and MOL methods estimate the effective number of breeders per year (Nb), which were converted to Ne by multiplying Nb by the generation time of 31 years for \textit{G. polyphemus} (Enge et al. 2006).\\
+\textbf{Fig. S2} \texttt{STRUCTURE} plot for 10 microsatellites with optimum number of clusters \textit{K} = 3 determined by \texttt{STRUCTURE HARVESTER}.\\
 
 \end{document}
