--- a/rnw/references.bib
+++ b/rnw/references.bib
@@ -673,3 +673,217 @@
    year = {2011},
    type = {Journal Article}
 }
+@article{Garke_et_al_2012,
+   author = {Garke, C. and Ytournel, F. and Bedhom, B. and Gut, I. and Lathrop, M. and Weigend, S. and Simianer, H.},
+   title = {Comparison of {SNP}s and microsatellites for assessing the genetic structure of chicken populations},
+   journal = {Animal Genetics},
+   volume = {43},
+   number = {4},
+   pages = {419-428},
+   ISSN = {1365-2052},
+   DOI = {10.1111/j.1365-2052.2011.02284.x},
+   url = {http://dx.doi.org/10.1111/j.1365-2052.2011.02284.x},
+   year = {2012},
+   type = {Journal Article}
+}
+@article{DeFaveri_et_al_2013,
+   author = {DeFaveri, Jacquelin and Viitaniemi, Heidi and Leder, Erica and Merilä, Juha},
+   title = {Characterizing genic and nongenic molecular markers: comparison of microsatellites and {SNP}s},
+   journal = {Molecular Ecology Resources},
+   volume = {13},
+   number = {3},
+   pages = {377-392},
+   ISSN = {1755-0998},
+   DOI = {10.1111/1755-0998.12071},
+   url = {http://dx.doi.org/10.1111/1755-0998.12071},
+   year = {2013},
+   type = {Journal Article}
+}
+@article{Jeffries_et_al_2016,
+   author = {Jeffries, Daniel L. and Copp, Gordon H. and Lawson Handley, Lori and Olsen, K. Hakan and Sayer, Carl D. and Hanfling, Bernd},
+   title = {Comparing {RAD}seq and microsatellites to infer complex phylogeographic patterns, an empirical perspective in the {C}rucian carp, {C}arassius carassius, {L}},
+   journal = {Molecular Ecology},
+   pages = {in press},
+   ISSN = {1365-294X},
+   DOI = {10.1111/mec.13613},
+   url = {http://dx.doi.org/10.1111/mec.13613},
+   year = {2016},
+   type = {Journal Article}
+}
+@article{Bernatchez_and_Landry_2003,
+   author = {Bernatchez, L. and Landry, C.},
+   title = {{MHC} studies in nonmodel vertebrates: what have we learned about natural selection in 15 years?},
+   journal = {Journal of Evolutionary Biology},
+   volume = {16},
+   number = {3},
+   pages = {363-377},
+   url = {http://www.ncbi.nlm.nih.gov/pubmed/14635837},
+   year = {2003},
+   type = {Journal Article}
+}
+@article{Sommer_2005,
+   author = {Sommer, Simone},
+   title = {The importance of immune gene variability ({MHC}) in evolutionary ecology and conservation},
+   journal = {Frontiers in Zoology},
+   volume = {2},
+   pages = {16-16},
+   DOI = {10.1186/1742-9994-2-16},
+   url = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=1282567&tool=pmcentrez&rendertype=abstract},
+   year = {2005},
+   type = {Journal Article}
+}
+@article{Wright_1931,
+   author = {Wright, Sewall},
+   title = {Evolution in Mendelian populations},
+   journal = {Genetics},
+   volume = {16},
+   number = {2},
+   pages = {97-159},
+   ISSN = {0016-6731},
+   year = {1931},
+   type = {Journal Article}
+}
+@book{Frankham_et_al_2010,
+   author = {Frankham, Richard and Ballou, Jonathan D. and Briscoe, David A.},
+   title = {Introduction to conservation genetics},
+   publisher = {Cambridge University Press},
+   address = {Cambridge},
+   edition = {2},
+   year = {2010},
+   type = {Book}
+}
+@article{Weber_et_al_2004,
+   author = {Weber, Diana S and Stewart, Brent S and Schienman, John and Lehman, Niles},
+   title = {Major histocompatibility complex variation at three class {II} loci in the northern elephant seal},
+   journal = {Molecular Ecology},
+   volume = {13},
+   number = {3},
+   pages = {711-718},
+   ISSN = {1365-294X},
+   year = {2004},
+   type = {Journal Article}
+}
+@article{Miller_et_al_2008,
+   author = {Miller, H. C. and Miller, K. A. and Daugherty, C. H.},
+   title = {Reduced {MHC} variation in a threatened tuatara species},
+   journal = {Animal Conservation},
+   volume = {11},
+   number = {3},
+   pages = {206-214},
+   ISSN = {1367-9430},
+   DOI = {10.1111/j.1469-1795.2008.00168.x},
+   year = {2008},
+   type = {Journal Article}
+}
+@article{Taylor_et_al_2012,
+   author = {Taylor, S. S. and Jenkins, D. A. and Arcese, P.},
+   title = {Loss of {MHC} and neutral variation in {P}eary caribou: genetic drift is not mitigated by balancing selection or exacerbated by {MHC} allele distributions},
+   journal = {PLoS One},
+   volume = {7},
+   number = {5},
+   pages = {e36748},
+   DOI = {10.1371/journal.pone.0036748},
+   url = {http://www.ncbi.nlm.nih.gov/pubmed/22655029},
+   year = {2012},
+   type = {Journal Article}
+}
+@article{Zhdanova_and_Pudovkin_2008,
+   author = {Zhdanova, Oxana L and Pudovkin, Alexander I},
+   title = {Nb\_{H}et{E}x: a program to estimate the effective number of breeders},
+   journal = {Journal of Heredity},
+   volume = {99},
+   number = {6},
+   pages = {694-695},
+   ISSN = {0022-1503},
+   year = {2008},
+   type = {Journal Article}
+}
+@article{Waples_and_Do_2008,
+   author = {Waples, Robin S and Do, CHI},
+   title = {{LDNE}: a program for estimating effective population size from data on linkage disequilibrium},
+   journal = {Molecular Ecology Resources},
+   volume = {8},
+   number = {4},
+   pages = {753-756},
+   ISSN = {1755-0998},
+   year = {2008},
+   type = {Journal Article}
+}
+@article{Nomura_2008,
+   author = {Nomura, Tetsuro},
+   title = {Estimation of effective number of breeders from molecular coancestry of single cohort sample},
+   journal = {Evolutionary Applications},
+   volume = {1},
+   number = {3},
+   pages = {462-474},
+   ISSN = {1752-4571},
+   year = {2008},
+   type = {Journal Article}
+}
+@techreport{Enge_et_al_2006,
+   author = {Enge, K.M. and Berish, J.E. and Bolt, R. and Dziergowski, A. and Musinsky, H.R.},
+   title = {Biological Status Report Gopher Tortoise},
+   institution = {Florida Fish and Wildlife Conservation Commission},
+   year = {2006},
+   type = {Report}
+}
+@article{Do_et_al_2014,
+   author = {Do, Chi and Waples, Robin S and Peel, David and Macbeth, GM and Tillett, Bree J and Ovenden, Jennifer R},
+   title = {Ne{E}stimator v2: re-implementation of software for the estimation of contemporary effective population size ({N}e) from genetic data},
+   journal = {Molecular Ecology Resources},
+   volume = {14},
+   number = {1},
+   pages = {209-214},
+   ISSN = {1755-0998},
+   year = {2014},
+   type = {Journal Article}
+}
+@article{Vasquez-Carrillo_et_al_2014,
+   author = {Vasquez-Carrillo, C. and Friesen, V. and Hall, L. and Peery, M. Z.},
+   title = {Variation in {MHC} class {II} {B} genes in marbled murrelets: implications for delineating conservation units},
+   journal = {Animal Conservation},
+   volume = {17},
+   number = {3},
+   pages = {244-255},
+   ISSN = {13679430},
+   DOI = {10.1111/acv.12089},
+   year = {2014},
+   type = {Journal Article}
+}
+@article{Lemay_and_Russello_2015,
+   author = {Lemay, M. A. and Russello, M. A.},
+   title = {Genetic evidence for ecological divergence in kokanee salmon},
+   journal = {Molecular Ecology},
+   volume = {24},
+   number = {4},
+   pages = {798-811},
+   DOI = {10.1111/mec.13066},
+   year = {2015},
+   type = {Journal Article}
+}
+@article{Hohenlohe_et_al_2010,
+   author = {Hohenlohe, Paul A. and Bassham, Susan and Etter, Paul D. and Stiffler, Nicholas and Johnson, Eric A. and Cresko, William A.},
+   title = {Population Genomics of Parallel Adaptation in Threespine Stickleback using Sequenced {RAD} Tags},
+   journal = {PLoS Genetics},
+   volume = {6},
+   number = {2},
+   pages = {e1000862},
+   DOI = {10.1371/journal.pgen.1000862},
+   url = {http://dx.doi.org/10.1371%2Fjournal.pgen.1000862},
+   year = {2010},
+   type = {Journal Article}
+}
+@article{Blanco-Bercial_and_Bucklin_2016,
+   author = {Blanco-Bercial, L. and Bucklin, A.},
+   title = {New view of population genetics of zooplankton: {RAD}-seq analysis reveals population structure of the {N}orth {A}tlantic planktonic copepod {C}entropages typicus},
+   journal = {Molecular Ecology},
+   volume = {25},
+   number = {7},
+   pages = {1566-80},
+   ISSN = {1365-294X (Electronic)
+0962-1083 (Linking)},
+   DOI = {10.1111/mec.13581},
+   url = {http://www.ncbi.nlm.nih.gov/pubmed/26857348},
+   year = {2016},
+   type = {Journal Article}
+}
